# Kinova-on-Husky

./: README.md
cor_mdp_husky/: .gitignore  README.md  cor_mdp_husky.rosinstall  initial_instructors_readme.md
cor_mdp_husky/camera_detector/: CMakeLists.txt  README.md  package.xml
cor_mdp_husky/camera_detector/launch/: camera_detector.launch
cor_mdp_husky/camera_detector/src/: camera_detector.cpp  camera_detector_main.cpp
cor_mdp_husky/check_for_humans/: CMakeLists.txt  README.md  package.xml  setup.py
cor_mdp_husky/check_for_humans/launch/: lidar_proposal.launch
cor_mdp_husky/check_for_humans/src/: lidar_prop_functions.py  lidar_proposals.py
cor_mdp_husky/check_for_humans/srv/: camera_goal.srv
cor_mdp_husky/cor_mdp_husky_bringup/: CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_control/: CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_control/config/: cor_mdp_husky_controllers.yaml  sim_controllers.yaml
cor_mdp_husky/cor_mdp_husky_control/launch/: sim_control.launch
cor_mdp_husky/cor_mdp_husky_description/: CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_description/rviz/: cor_mdp_husky_navigation.rviz
cor_mdp_husky/cor_mdp_husky_description/urdf/: duot06_description.urdf.xacro
cor_mdp_husky/cor_mdp_husky_gazebo/: CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_gazebo/config/: trajectory_control.yaml
cor_mdp_husky/cor_mdp_husky_gazebo/launch/: cor_mdp_husky_gazebo.launch  husky_lely.launch  husky_samxl.launch  husky_samxl_prontobot.launch  spawn_cor_mdp_husky.launch  spawn_ur5.launch
cor_mdp_husky/cor_mdp_husky_gazebo/maps/: samxl_testmap.yaml
cor_mdp_husky/cor_mdp_husky_gazebo/scripts/: ur5_waypoints.py
cor_mdp_husky/cor_mdp_husky_gazebo/worlds/: lely.world  samxl.world
cor_mdp_husky/cor_mdp_husky_kinova_planning/: CMakeLists.txt  README.md  package.xml
cor_mdp_husky/cor_mdp_husky_kinova_planning/launch/: kinova_planning.launch
cor_mdp_husky/cor_mdp_husky_kinova_planning/src/: kinova_planning.py
cor_mdp_husky/cor_mdp_husky_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_moveit_config/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
cor_mdp_husky/cor_mdp_husky_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
cor_mdp_husky/cor_mdp_husky_navigation/: CMakeLists.txt  package.xml
cor_mdp_husky/cor_mdp_husky_navigation/include/: navigation_to_waypoints.hpp
cor_mdp_husky/cor_mdp_husky_navigation/src/: navigation_to_waypoints.cpp  navigation_to_waypoints_main.cpp
cor_mdp_husky/gazebo_attach_model_plugin/: CMakeLists.txt  package.xml
cor_mdp_husky/point_mgmt/: README.md
cor_mdp_husky/point_mgmt/src/: point_mgr.cpp
cor_mdp_husky/qtros/: CMakeLists.txt  README.md
cor_mdp_husky/qtros/src/: main_window.cpp  qnode.cpp
cor_mdp_husky/state_machine/: README.md  sm_functions.py  state_machine.py
duot06/: README.md
duot06/duot06_bringup/: CMakeLists.txt  package.xml
duot06/duot06_bringup/launch/: camera.launch  extras.launch  results.txt
duot06/duot06_bringup/scripts/: environment
duot06/duot06_description/: CMakeLists.txt  package.xml
duot06/duot06_description/config/: localization.yaml
duot06/duot06_description/meshes/: antenna.STL  arch.STL  blackfly_lens_mount.STL  rails.STL
duot06/duot06_description/urdf/: duot06_description.urdf.xacro
duot06/duot06_gen3_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
duot06/duot06_gen3_lite_moveit_config/config/: husky.srdf
duot06/duot06_gen3_lite_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  duot06_gen3_lite_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  (+9 more)
(+220 files in other folders)
