<?xml version="1.0"?>
<package format="2">
  <name>cor_mdp_husky_kinova_planning</name>
  <version>0.0.0</version>
  <description>The cor_mdp_husky_kinova_planning package</description>
  <maintainer email="mathijs@todo.todo">mathijs</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>kortex_driver</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
