<?xml version="1.0"?>
<package format="2">
  <name>gazebo_attach_model_plugin</name>
  <version>0.0.0</version>
  <description>The gazebo_attachmodel_plugin package</description>
  <maintainer email="karen@todo.todo">karen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>

  <export>
  </export>
</package>
